# xstd-rs

./: Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/futures_core/stream/: trait.Stream.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/xstd/stream/: trait.UniqueBy.js
src/: dynamic.rs  error.rs  lib.rs  macros.rs  vec.rs
src/iter/: intersperse_iter.rs  memento_iter.rs  mod.rs
src/stream/: mod.rs  unique.rs
src/xstd/: dynamic.rs.html  lib.rs.html  macros.rs.html  vec.rs.html
src/xstd/iter/: intersperse_iter.rs.html  memento_iter.rs.html  mod.rs.html
src/xstd/stream/: mod.rs.html  unique.rs.html
xstd/: all.html  index.html  macro.ifte!.html  macro.ifte.html  sidebar-items.js
xstd/dynamic/: index.html  sidebar-items.js  trait.IsInstanceOf.html
xstd/iter/: index.html  sidebar-items.js  struct.IntersperseIter.html  struct.MementoIter.html  trait.IntersperseIterAdapter.html  trait.MementoIterAdapter.html
xstd/iter/intersperse_iter/: struct.IntersperseIter.html  trait.IntersperseIterAdapter.html
xstd/iter/memento_iter/: struct.MementoIter.html  trait.MementoIterAdapter.html
xstd/macros/: index.html
xstd/prelude/: index.html
xstd/stream/: index.html  sidebar-items.js  struct.Unique.html  trait.UniqueBy.html
xstd/vec/: index.html  sidebar-items.js  trait.Unlines.html  trait.Unwords.html
(+3 files in other folders)
