[package]
name = "xstd"
description = "eXtended STandarD library"
version = "0.1.0"
authors = ["j-keck <jhyphenkeck@gmail.com>"]
edition = "2018"
repository = "https://github.com/j-keck/xstd-rs"
license = "MIT"
documentation = "https://j-keck.github.io/xstd-rs/"
readme = "README.md"

[dependencies]
